Create the Data Access Layer and the RealestateServeice
